# yaff

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: print_type.h  types.h  zipper.h
include/fields/: Scalar.h  ScalarField.h  operators.h
src/: main.cpp
src/fields/: Scalar.cpp
